Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24317

Snippets tooltip does not expand modifiers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.14.0-beta1
    • Qt Creator 4.14.0-beta1
    • Editors
    • None
    • c8a35714263baf01d33d5885993cd2a3b5150fe7 (qt-creator/qt-creator/master)

      Snippet text modifiers such as ":c" are not understood when generating the snippet details and therefore end up verbatim in the output, which is rather confusing to users.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes